--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,12 @@ server.port=8081
 spring.datasource.url=jdbc:postgresql://172.17.0.2:5432/libre-market
 spring.datasource.username=admin
 spring.datasource.password=admin
+
+# Specify the path of the OpenAPI documentation
+springdoc.api-docs.path=/api-docs
+
+# Specify the path of the Swagger UI
+springdoc.swagger-ui.path=/swagger-ui.html
+
+# Enable or disable Swagger UI
+springdoc.swagger-ui.enabled=true
